syntax = "proto3";

package grpcauth.api;
option go_package = "github.com/rotationalio/grpc-token-auth/proto;api";


service Authenticator {
    rpc Login(LoginRequest) returns (LoginReply) {};
    rpc Logout(Empty) returns (LogoutReply) {};
    rpc Secure(Empty) returns (SecureReply) {};
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    string token = 1;
}

message LogoutReply {
    bool success = 1;
}

message SecureReply {
    string message = 1;
}

message Empty {}